test/E2ETest/testassets/generate/generate-connectionstring-dependency.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: 'frontend'
    app.kubernetes.io/part-of: 'generate-connectionstring-dependency'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'frontend'
        app.kubernetes.io/part-of: 'generate-connectionstring-dependency'
    spec:
      containers:
      - name: frontend
        image: frontend:1.0.0
        imagePullPolicy: Always
        env:
        - name: ASPNETCORE_URLS
          value: 'http://*'
        - name: PORT
          value: '80'
        - name: TYE_SECRETS_PATH
          value: '/var/tye/bindings/'
        volumeMounts:
        - name: binding-dependency
          mountPath: /var/tye/bindings/dependency
          readOnly: true
        ports:
        - containerPort: 80
      volumes:
      - name: binding-dependency
        secret:
          secretName: binding-production-dependency-secret
          items:
          - key: connectionstring
            path: CONNECTIONSTRINGS__DEPENDENCY
...
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: 'frontend'
    app.kubernetes.io/part-of: 'generate-connectionstring-dependency'
spec:
  selector:
    app.kubernetes.io/name: frontend
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
...
