test/E2ETest/testassets/generate/generate-uri-dependency.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: 'frontend'
    app.kubernetes.io/part-of: 'generate-uri-dependency'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'frontend'
        app.kubernetes.io/part-of: 'generate-uri-dependency'
    spec:
      containers:
      - name: frontend
        image: frontend:1.0.0
        imagePullPolicy: Always
        env:
        - name: DOTNET_LOGGING__CONSOLE__DISABLECOLORS
          value: 'true'
        - name: ASPNETCORE_URLS
          value: 'http://*'
        - name: PORT
          value: '80'
        - name: SERVICE__FRONTEND__PROTOCOL
          value: 'http'
        - name: SERVICE__FRONTEND__PORT
          value: '80'
        - name: SERVICE__FRONTEND__HOST
          value: 'frontend'
        - name: SERVICE__DEPENDENCY__PROTOCOL
          valueFrom:
            secretKeyRef:
              name: 'binding-production-dependency-secret'
              key: 'protocol'
        - name: SERVICE__DEPENDENCY__HOST
          valueFrom:
            secretKeyRef:
              name: 'binding-production-dependency-secret'
              key: 'host'
        - name: SERVICE__DEPENDENCY__PORT
          valueFrom:
            secretKeyRef:
              name: 'binding-production-dependency-secret'
              key: 'port'
        ports:
        - containerPort: 80
...
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: 'frontend'
    app.kubernetes.io/part-of: 'generate-uri-dependency'
spec:
  selector:
    app.kubernetes.io/name: frontend
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
...
