test/E2ETest/testassets/generate/multi-project.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: 'backend'
    app.kubernetes.io/part-of: 'multi-project'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'backend'
        app.kubernetes.io/part-of: 'multi-project'
    spec:
      containers:
      - name: backend
        image: test/backend:1.0.0
        imagePullPolicy: Always
        env:
        - name: ASPNETCORE_URLS
          value: 'http://*:7000'
        - name: PORT
          value: '7000'
        - name: SERVICE__FRONTEND__PROTOCOL
          value: 'http'
        - name: SERVICE__FRONTEND__PORT
          value: '8000'
        - name: SERVICE__FRONTEND__HOST
          value: 'frontend'
        - name: TYE_SECRETS_PATH
          value: '/var/tye/bindings/'
        volumeMounts:
        - name: binding-rabbit
          mountPath: /var/tye/bindings/rabbit
          readOnly: true
        ports:
        - containerPort: 7000
      volumes:
      - name: binding-rabbit
        secret:
          secretName: binding-production-rabbit-secret
          items:
          - key: protocol
            path: SERVICE__RABBIT__PROTOCOL
          - key: host
            path: SERVICE__RABBIT__HOST
          - key: port
            path: SERVICE__RABBIT__PORT
...
---
kind: Service
apiVersion: v1
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: 'backend'
    app.kubernetes.io/part-of: 'multi-project'
spec:
  selector:
    app.kubernetes.io/name: backend
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 7000
    targetPort: 7000
...
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: 'frontend'
    app.kubernetes.io/part-of: 'multi-project'
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'frontend'
        app.kubernetes.io/part-of: 'multi-project'
    spec:
      containers:
      - name: frontend
        image: test/frontend:1.0.0
        imagePullPolicy: Always
        env:
        - name: ASPNETCORE_URLS
          value: 'http://*:8000'
        - name: PORT
          value: '8000'
        - name: SERVICE__BACKEND__PROTOCOL
          value: 'http'
        - name: SERVICE__BACKEND__PORT
          value: '7000'
        - name: SERVICE__BACKEND__HOST
          value: 'backend'
        - name: TYE_SECRETS_PATH
          value: '/var/tye/bindings/'
        volumeMounts:
        - name: binding-rabbit
          mountPath: /var/tye/bindings/rabbit
          readOnly: true
        ports:
        - containerPort: 8000
      volumes:
      - name: binding-rabbit
        secret:
          secretName: binding-production-rabbit-secret
          items:
          - key: protocol
            path: SERVICE__RABBIT__PROTOCOL
          - key: host
            path: SERVICE__RABBIT__HOST
          - key: port
            path: SERVICE__RABBIT__PORT
...
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: 'frontend'
    app.kubernetes.io/part-of: 'multi-project'
spec:
  selector:
    app.kubernetes.io/name: frontend
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
...
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: 'worker'
    app.kubernetes.io/part-of: 'multi-project'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'worker'
        app.kubernetes.io/part-of: 'multi-project'
    spec:
      containers:
      - name: worker
        image: test/worker:1.0.0
        imagePullPolicy: Always
        env:
        - name: SERVICE__BACKEND__PROTOCOL
          value: 'http'
        - name: SERVICE__BACKEND__PORT
          value: '7000'
        - name: SERVICE__BACKEND__HOST
          value: 'backend'
        - name: SERVICE__FRONTEND__PROTOCOL
          value: 'http'
        - name: SERVICE__FRONTEND__PORT
          value: '8000'
        - name: SERVICE__FRONTEND__HOST
          value: 'frontend'
        - name: TYE_SECRETS_PATH
          value: '/var/tye/bindings/'
        volumeMounts:
        - name: binding-rabbit
          mountPath: /var/tye/bindings/rabbit
          readOnly: true
      volumes:
      - name: binding-rabbit
        secret:
          secretName: binding-production-rabbit-secret
          items:
          - key: protocol
            path: SERVICE__RABBIT__PROTOCOL
          - key: host
            path: SERVICE__RABBIT__HOST
          - key: port
            path: SERVICE__RABBIT__PORT
...
