test/E2ETest/testassets/generate/single-project-registrypullsecret.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: test-project
  labels:
    app.kubernetes.io/name: 'test-project'
    app.kubernetes.io/part-of: 'single-project'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test-project
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 'test-project'
        app.kubernetes.io/part-of: 'single-project'
    spec:
      containers:
      - name: test-project
        image: test/test-project:1.0.0
        imagePullPolicy: Always
        env:
        - name: DOTNET_LOGGING__CONSOLE__DISABLECOLORS
          value: 'true'
        - name: ASPNETCORE_URLS
          value: 'http://*'
        - name: PORT
          value: '80'
        - name: SERVICE__TEST-PROJECT__PROTOCOL
          value: 'http'
        - name: SERVICE__TEST-PROJECT__PORT
          value: '80'
        - name: SERVICE__TEST-PROJECT__HOST
          value: 'test-project'
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: credsecret
...
---
kind: Service
apiVersion: v1
metadata:
  name: test-project
  labels:
    app.kubernetes.io/name: 'test-project'
    app.kubernetes.io/part-of: 'single-project'
spec:
  selector:
    app.kubernetes.io/name: test-project
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
...
